# espresso

./: .clang-format  .clang-tidy  .gitignore  .gitmodules  meson.build  meson_options.txt
assets/scripts/: test.lua
include/components/core/: LuaBehavior.h  LuaScriptEngine.h
include/components/graphics/: Camera.h
include/core/: Application.h  Component.h  Entity.h  EntryPoint.h  EventManager.h  Scene.h  TickThread.h  Transform.h  log.h
include/core/jobs/: FrameMemoryPool.h  Job.h  JobManager.h  JobMemoryPool.h  JobTypes.h  WorkerThread.h
include/editor/core/: EditorContext.h
include/graphics/: CommandList.h  Framebuffer.h  GraphicContext.h  GraphicDevice.h  GraphicResource.h  GraphicsDevice.h  RenderGraph.h  RenderPass.h  RenderPipeline.h  RenderThread.h  Renderer.h  Shader.h  Swapchain.h  Texture2D.h
include/graphics/noop/: NopGraphicContext.h  NopGraphicDevice.h
include/graphics/ogl/: GLGraphicDevice.h
include/graphics/vulkan/: VkCommandList.h  VkFramebuffer.h  VkGraphicContext.h  VkGraphicDevice.h  VkShader.h  VkSwapchain.h  VkTexture2D.h
include/input/: Input.h  Scancode.h
include/platform/: AssetManager.h  EnvironmentInfo.h  EventHandler.h  JobScheduler.h  StackTrace.h  Thread.h  ThreadManager.h  Window.h
include/platform/assets/: LuaScript.h
include/utils/: BinaryReader.h  BinaryUtils.h  BinaryWriter.h  CrashReporter.h  Demangle.h  PerformanceTimer.h  SerializableObject.h  StringUtils.h
include/utils/math/: Color.h  Matrix4.h  Quaternion.h  Vector2.h  Vector3.h  Vector4.h
sandbox/: main.cpp
src/components/core/: LuaBehavior.cpp  LuaScriptEngine.cpp
src/components/graphics/: Camera.cpp
src/core/: Application.cpp  EventManager.cpp  Scene.cpp  TickThread.cpp  Transform.cpp  log.cpp
src/core/jobs/: FrameMemoryPool.cpp  Job.cpp  JobManager.cpp  WorkerThread.cpp
src/editor/core/: EditorContext.cpp
src/graphics/: GraphicDevice.cpp  RenderGraph.cpp  RenderThread.cpp  Renderer.cpp  Swapchain.cpp
src/graphics/noop/: NopGraphicContext.cpp  NopGraphicDevice.cpp
src/graphics/ogl/: GLGraphicDevice.cpp
src/graphics/vulkan/: VkCommandList.cpp  VkGraphicContext.cpp  VkGraphicDevice.cpp  VkShader.cpp  VkSwapchain.cpp  VkTexture2D.cpp
src/input/: Input.cpp
src/platfom/: Thread.cpp  Window.cpp
src/platform/: AssetManager.cpp  EnvironmentInfo.cpp  EventHandler.cpp  JobScheduler.cpp  StackTrace.cpp  Thread.cpp  ThreadManager.cpp  Window.cpp
src/platform/assets/: LuaScript.cpp
src/utils/: CrashReporter.cpp  Demangle.cpp  PerformanceTimer.cpp  StringUtils.cpp
subprojects/: concurrentqueue.wrap
subprojects/glad/: meson.build
subprojects/glad/include/glad/: egl.h  gl.h
subprojects/glad/src/: egl.c  gl.c  volk.c
tools/: AssetCompressor.cpp  AssetDecompressor.cpp
